--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -20,6 +20,7 @@
         - 3.0.4 Min Height: 320px Max Height: 399px
         - 3.0.5 Min Height: 319px
                 
+> dark theme
 --------------------------------------------- */
 
 /* ------------------------------------------ 1.0 Specific Breakpoints ------------------------------------------ */
