--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     - 21.0 Theme Function
 
 > style-breakpoints
+> dark theme
 --------------------------------------------- */
 
 /* ------------------------------------------ Import ------------------------------------------*/
