--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -274,6 +274,16 @@
         flex: 0 0 auto;
         width: 50%;
     }
+
+    .wbnrfz_btn_theme, body.dark-mode .wbnrfz_btn_theme {
+        margin-left: 15px !important;
+        margin-top: 15px !important;
+    }
+
+    body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+        background-color: #1f2022;
+        color: #fff;
+    }
 }
 
 /* ---- */
