--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -249,6 +249,16 @@ body.dark-mode [data-title] {
     border-bottom: 1px dotted #fff;
 }
 
+body.dark-mode .alert-info {
+    background-color: #032830;
+    color: #3ad1f6;
+    border-color: #087990;
+}
+
+body.dark-mode .alert-dismissible .btn-close {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") !important;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 2.0 Statistics/Past Records Page ------------------------------------------ */
